syntax = "proto3";

option csharp_namespace = "GrpcVipClient";

package vip;

service VipProtoServices {
  rpc GetVipWithMoney (GetVipWithMoneyRequest) returns (VipModel);
  rpc GetAllVip (GetAllVipRequest) returns (GetAllVipResponse);
}

message GetAllVipRequest{
}

message GetAllVipResponse{
	repeated VipModel vip = 1;
}

message GetVipWithMoneyRequest {
  int32 money = 1;
}

message VipModel{
	int32 id = 1;
	string vip_name = 2;
	int32 require_vip = 3;
}